# smearor-swipe-launcher

./: .gitignore  AGENTS.md  APP_LAUNCHER_CONCEPT.md  ASYNC_PLUGINS_CONCEPT.md  AUDIO_WIDGET.md  BUTTON_WIDGET.md  CONCEPT.md  Cargo.toml  DESIGN.md  FLEXIBLE_LAYOUT_CONCEPT.md  GNOME_WALLPAPER_ENGINE_CONCEPT.md  HTTP_SERVICE_CONCEPT.md  HYPRLAND_SERVICE_CONCEPT.md  HYPRLAND_STATUS_SERVICE_CONCEPT.md  HYPRLAND_WORKSPACE_TRACKING_CONCEPT.md  LAYER_SHELL_WINDOW_CONCEPT.md  MCP_SERVER_CONCEPT.md  MONITOR_EVENT_CONCEPT.md  MPRIS_WIDGET.md  MULTIPLE_WIDGETS_PER_PLUGIN_CONCEPT.md  MULTI_INSTANCE_CONCEPT.md  NETWORK_MENU_CONCEPT_2.md  NOTIFICATIONS_WIDGET.md  README.md  ROADMAP.md  SECURITY.md  SERVICE_PLUGIN_CONCEPT.md  SYSINFO_CONCEPT.md  TERMINAL_COMMAND_CONCEPT.md  WALLPAPER_CONCEPT.md  WIDGET_CONCEPT.md  WIDGET_CONCEPT_PROMPT.md  WIDGET_SYSTEM.md  WORKSPACE_SWITCHER_PLUGIN_CONCEPT.md  WORKSPACE_SWITCHING_CONCEPT.md  config-90.toml  config-example-bottom.toml  config-example-left.toml  config-example-right.toml  config-example-top.toml  (+7 more)
mcp-server/: Cargo.toml
mcp-server/src/: jsonrpc.rs  lib.rs  resources.rs  tools.rs
model/app-launcher/: Cargo.toml
model/app-launcher/src/: json_converters.rs  lib.rs
model/app-launcher/src/messages/: command.rs  mod.rs  status.rs
model/app-launcher/src/messages/wrapper/: color_mask.rs  layer.rs  mod.rs  rotation.rs  window.rs  wrapper.rs
model/clock/: Cargo.toml
model/hyprland/: Cargo.toml
model/hyprland/src/: json_converters.rs  lib.rs
model/hyprland/src/messages/: dispatch_action.rs  dispatch_message.rs  mod.rs
model/hyprland/src/messages/command/: kill.rs  mod.rs  notify.rs  output_create.rs  output_remove.rs  plugin_load.rs  plugin_unload.rs  reload.rs  set_cursor.rs  (+3 more)
model/wallpaper/: Cargo.toml
model/wallpaper/src/: json_converters.rs  lib.rs  topics.rs
model/wallpaper/src/messages/: app_config.rs  command.rs  image_config.rs  mod.rs  monitor_process.rs  status.rs  theme.rs  theme_config.rs  theme_info.rs  video_config.rs  wallpaper_type.rs
plugin-api/: Cargo.toml  build.rs
plugin-api/src/: config.rs  context.rs  error.rs  json_converter.rs  lib.rs  macro.rs  messages.rs  meta.rs  nerd_font.rs  plugin.rs  service.rs  type_id.rs  widget.rs
plugins/app-launcher/: Cargo.toml
plugins/app-launcher-service/: Cargo.toml
plugins/app-launcher-service/src/: lib.rs
plugins/app-launcher-widget/: Cargo.toml
plugins/app-launcher-widget/src/: desktop_entry.rs  lib.rs  widget.rs
plugins/app-launcher/src/: config.rs  lib.rs  widget.rs
plugins/button/: Cargo.toml
plugins/button/src/: config.rs  lib.rs  widget.rs
plugins/clock/: Cargo.toml
plugins/clock-widget/: Cargo.toml
plugins/clock-widget/src/: clock.rs  config.rs  lib.rs  widget.rs
plugins/clock/src/: clock.rs  config.rs  lib.rs  widget.rs
plugins/network/: Cargo.toml
plugins/network/src/: config.rs  lib.rs  widget.rs
plugins/power/: Cargo.toml
plugins/power/src/: config.rs  lib.rs  widget.rs
plugins/sysinfo/: Cargo.toml
plugins/sysinfo/src/: config.rs  lib.rs  shared.rs  widget_battery.rs  widget_cpu.rs  widget_disks.rs  widget_memory.rs  widget_network.rs  widget_temperature.rs  widget_uptime.rs
plugins/wallpaper/: Cargo.toml
plugins/wallpaper/src/: config.rs  lib.rs  preview.rs  widget.rs
plugins/workspace-switcher/: Cargo.toml
plugins/workspace-switcher/src/: config.rs  lib.rs  widget.rs
services/app-launcher/: Cargo.toml
services/app-launcher/src/: config.rs  lib.rs  mcp.rs  service.rs
services/audio/: Cargo.toml
services/audio/src/: config.rs  lib.rs  mcp.rs  pulse.rs  pulse_command.rs  pulse_state.rs  service.rs
services/gnome/: Cargo.toml
services/gnome/src/: config.rs  lib.rs  service.rs
services/gnome/src/monitor/: event.rs  mod.rs  tracker.rs  worker.rs
services/gnome/src/workspace/: dbus.rs  gsettings.rs  mod.rs  tracker.rs
services/http/: Cargo.toml
services/http/src/: config.rs  lib.rs  service.rs  whitelist.rs
services/hyprland/: Cargo.toml
services/hyprland/src/: config.rs  lib.rs  service.rs
services/hyprland/src/monitor/: event.rs  listener.rs  mod.rs  worker.rs
services/hyprland/src/workspace/: mod.rs
services/mpris/: Cargo.toml
services/mpris/src/: config.rs  dbus.rs  lib.rs  mcp.rs  mpris_command.rs  mpris_state.rs  service.rs
services/network/: Cargo.toml
services/network/src/: config.rs  dbus.rs  lib.rs  service.rs  throughput.rs
services/sysinfo/: Cargo.toml
services/sysinfo/src/: collector.rs  config.rs  lib.rs  service.rs
services/terminal_command/: Cargo.toml
services/terminal_command/src/: config.rs  lib.rs  mcp.rs  service.rs
services/terminal_command/src/service/: launch.rs  reaper.rs  terminate.rs  tracked_process.rs
services/wallpaper/: Cargo.toml  MPVPAPER_USAGE.md  MPV_OPTIONS.md
services/wallpaper/src/: config.rs  lib.rs  process.rs  service.rs
smearor-swipe-launcher/: Cargo.toml  build.rs
smearor-swipe-launcher-plugin-api/: Cargo.toml
smearor-swipe-launcher-plugin-api/src/: config.rs  error.rs  lib.rs  macro.rs  messages.rs  meta.rs  plugin.rs  service.rs  widget.rs
smearor-swipe-launcher/src/: application.rs  args.rs  config.rs  context.rs  controller.rs  css_provider.rs  display.rs  error.rs  instance.rs  json_converter.rs  main.rs  mcp_registry.rs  mcp_response_tracker.rs  messages.rs  plugin.rs  plugin_manager.rs  service.rs  service_manager.rs  window.rs
smearor-swipe-launcher/src/area/: area_manager.rs  area_stack.rs  error.rs  layout_transition.rs  managed_area.rs  mod.rs
smearor-swipe-launcher/src/area/messages/: add.rs  close.rs  mod.rs  open.rs  remove.rs  router.rs
smearor-swipe-launcher/src/args/: launcher.rs  layer.rs  mod.rs  rotation.rs
smearor-swipe-launcher/src/config/: area.rs  error.rs  launcher.rs  layer.rs  merge.rs  mod.rs  plugin.rs  rotation.rs  services.rs
smearor-swipe-launcher/src/config/area/: area_type.rs  config.rs  config_entry.rs  mod.rs  orientation.rs  transition.rs
smearor-swipe-launcher/src/config/layout/: config.rs  mod.rs  profile.rs  trigger.rs
smearor-swipe-launcher/src/messages/: mod.rs
(+269 files in other folders)
