[workspace]
resolver = "3"

members = [
    "model/app-launcher",
    "model/area",
    "model/audio",
    "model/clock",
    "model/hyprland",
    "model/http",
    "model/mcp",
    "model/message",
    "model/mpris",
    "model/notifications",
    "model/plugin",
    "model/sysinfo",
    "model/weather",
    "mcp-server",
    "plugin-api",
    "plugins/clock",
    "plugins/app-launcher",
    "plugins/audio",
    "plugins/button",
    "plugins/mpris",
    "plugins/notifications",
    "plugins/sysinfo",
    "plugins/weather",
    "services/app-launcher",
    "services/audio",
    "services/hyprland",
    "services/http",
    "services/mpris",
    "services/notifications",
    "services/sysinfo",
    "services/weather",
    "smearor-swipe-launcher",
]

default-members = [
    "model/app-launcher",
    "model/area",
    "model/audio",
    "model/clock",
    "model/hyprland",
    "model/http",
    "model/mcp",
    "model/message",
    "model/mpris",
    "model/notifications",
    "model/plugin",
    "model/sysinfo",
    "model/weather",
    "mcp-server",
    "plugin-api",
    "plugins/clock",
    "plugins/app-launcher",
    "plugins/audio",
    "plugins/button",
    "plugins/mpris",
    "plugins/notifications",
    "plugins/sysinfo",
    "plugins/weather",
    "services/app-launcher",
    "services/audio",
    "services/hyprland",
    "services/http",
    "services/mpris",
    "services/notifications",
    "services/sysinfo",
    "services/weather",
    "smearor-swipe-launcher",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Andreas Schaeffer"]

[workspace.dependencies]
stabby = { version = "72.1", features = ["libloading"] }
axum = { version = "0.8", features = ["tokio"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
async-stream = "0.3"
adw = { package = "libadwaita", version = "0.9.1" }
clap = { version = "4.5", features = ["derive"] }
async-channel = "2.5"
dashmap = "6.2.1"
dirs = "6.0"
freedesktop_entry_parser = "2.0"
futures-util = "0.3"
gtk4 = "0.11"
glib = "0.22"
glib-build-tools = "0.22"
gtk4-layer-shell = "0.8"
#hyprland = "0.3.13"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
libpulse-binding = "2.30"
libloading = "0.8"
miette = { version = "7.4", features = ["fancy"] }
nerd_gtk_icons = "0.1.1"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smearor-wrot-rotation = { version = "0.1", git = "https://github.com/smearor/smearor-wrot-rotation.git" }
#smearor-wrot-rotation = { version = "0.1", path = "../smearor-wrot-rotation" }
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4"] }
typed-builder = "0.23.2"
which = "8.0"
zbus = "5"
