[package]
name = "smearor-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-channel = { workspace = true }
async-stream = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
futures-util = { workspace = true }
rust-mcp-sdk = "0.10"
rust-mcp-axum = "0.2.3"
serde = { workspace = true }
serde_json = { workspace = true }
smearor-model-mcp = { path = "../model/mcp" }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
