[package]
name = "smearor-swipe-launcher-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dashmap = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-wrot-rotation = { workspace = true }
stabby = { workspace = true }
tracing = { workspace = true }
