[package]
name = "smearor-swipe-launcher-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gtk4 = { workspace = true }
glib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
smearor-wrot-rotation = { workspace = true }
abi_stable = { workspace = true }
