[package]
name = "smearor-swipe-launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
abi_stable = { workspace = true }
dashmap = { workspace = true }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
glib = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
smearor-swipe-launcher-plugin-api = { path = "../plugin-api" }
smearor-wrot-rotation = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

[build-dependencies]
glib-build-tools = { workspace = true }
