[package]
name = "smearor-hyprland-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
stabby = { workspace = true }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
