[package]
name = "app-launcher-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["smearor"]

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
miette = { workspace = true }
dashmap = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-plugin-api = { path = "../../smearor-plugin-api" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
