[package]
name = "clock-widget"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["smearor"]

[lib]
crate-type = ["cdylib"]

[dependencies]
smearor-plugin-api = { path = "../../smearor-plugin-api" }
gtk4 = { workspace = true }
glib = { workspace = true }
adw = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
abi_stable = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }
time = { version = "0.3", features = ["local-offset", "formatting"] }