[package]
name = "smearor-network-widget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
glib = { workspace = true }
gtk4 = { workspace = true }
miette = { workspace = true }
paste = { workspace = true }
qrcode = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
smearor-model-mcp = { path = "../../model/mcp" }
smearor-network-model = { path = "../../model/network" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
stabby = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
