[package]
name = "smearor-app-launcher-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true }
freedesktop_entry_parser = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
miette = { workspace = true }
dashmap = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-swipe-launcher-plugin-api = { path = "../../smearor-swipe-launcher-plugin-api" }
smearor-app-launcher-model = { path = "../../model/app-launcher" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
