[package]
name = "smearor-app-launcher-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stabby = { workspace = true }
dirs = { workspace = true }
freedesktop_entry_parser = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
miette = { workspace = true }
dashmap = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
smearor-app-launcher-model = { path = "../../model/app-launcher" }
smearor-model-mcp = { path = "../../model/mcp" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
which = { workspace = true }
