[package]
name = "smearor-gnome-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stabby = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
smearor-model-compositor = { path = "../../model/workspace" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
