[package]
name = "smearor-hyprland-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hyprland = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stabby = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smearor-hyprland-model = { path = "../../model/hyprland" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
