[package]
name = "smearor-network-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
glib = { workspace = true }
miette = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-model-mcp = { path = "../../model/mcp" }
smearor-http-model = { path = "../../model/http" }
smearor-network-model = { path = "../../model/network" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
stabby = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
zbus = { workspace = true }
