[package]
name = "smearor-sysinfo-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stabby = { workspace = true }
glib = { workspace = true }
miette = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-model-mcp = { path = "../../model/mcp" }
sysinfo = { workspace = true }
smearor-sysinfo-model = { path = "../../model/sysinfo" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
