[package]
name = "smearor-terminal-command-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dashmap = { workspace = true }
glib = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
smearor-terminal-command-model = { path = "../../model/terminal_command" }
stabby = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
