[package]
name = "smearor-wallpaper-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stabby = { workspace = true }
glib = { workspace = true }
miette = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smearor-model-mcp = { path = "../../model/mcp" }
smearor-wallpaper-model = { path = "../../model/wallpaper" }
smearor-swipe-launcher-plugin-api = { path = "../../plugin-api" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
